--- a/RecipeBox/Base.lproj/Main.storyboard
+++ b/RecipeBox/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -101,24 +101,26 @@
                                     <size key="itemSize" width="179" height="187"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="1" minY="1" maxX="1" maxY="3"/>
+                                    <inset key="sectionInset" minX="5" minY="3" maxX="5" maxY="3"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" reuseIdentifier="CategoryGridCell" id="uPL-mq-3sB" customClass="CategoryGridCell" customModule="RecipeBox" customModuleProvider="target">
-                                        <rect key="frame" x="1" y="1" width="178" height="186"/>
+                                        <rect key="frame" x="5" y="3" width="179" height="186"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vBI-za-zs0">
-                                            <rect key="frame" x="0.0" y="0.0" width="178" height="186"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="179" height="186"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7DT-Vm-cF3">
-                                                    <rect key="frame" x="15" y="8" width="155" height="170"/>
+                                                    <rect key="frame" x="15" y="8" width="156" height="170"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="170" id="KYJ-Uf-dOm"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="170" id="KnR-Br-CwU"/>
+                                                        <constraint firstAttribute="width" constant="156" id="hp4-fn-d9H"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHU-A0-H0C">
-                                                    <rect key="frame" x="67" y="111" width="44" height="25"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHU-A0-H0C">
+                                                    <rect key="frame" x="67.5" y="111" width="44" height="25"/>
                                                     <attributedString key="attributedText">
                                                         <fragment content="Label">
                                                             <attributes>
@@ -137,7 +139,6 @@
                                                 <constraint firstItem="7DT-Vm-cF3" firstAttribute="centerY" secondItem="vBI-za-zs0" secondAttribute="centerY" id="R9P-da-MJD"/>
                                                 <constraint firstItem="7DT-Vm-cF3" firstAttribute="trailing" secondItem="vBI-za-zs0" secondAttribute="trailingMargin" id="Rch-hj-bDN"/>
                                                 <constraint firstItem="7DT-Vm-cF3" firstAttribute="top" secondItem="vBI-za-zs0" secondAttribute="topMargin" id="qGw-sq-eMh"/>
-                                                <constraint firstItem="uHU-A0-H0C" firstAttribute="leading" secondItem="vBI-za-zs0" secondAttribute="leading" constant="67" id="uYE-4J-GSU"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
@@ -213,7 +214,7 @@
         <!--Ingredients-->
         <scene sceneID="rvx-Dr-pIj">
             <objects>
-                <tableViewController id="1hT-AS-TFL" sceneMemberID="viewController">
+                <tableViewController id="1hT-AS-TFL" customClass="IngredientsTableViewController" customModule="RecipeBox" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="mj1-5W-APQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
